# TAC-P2

./: CMakeLists.txt  LICENSE  README.md  zip.sh
report/: .gitignore  README.md  mymacros.sty  references.bib  report.tex  uc3mreport.cls
report/img/: .gitignore
report/parts/: 1-resumen.tex  2-desarrollo.tex  2.1-path.tex  2.2-clique.tex  2.3-sat.tex  3-conclusiones.tex  a-manual.tex
src/: CMakeLists.txt  main.cpp  test.py
src/graph/: CMakeLists.txt  graph.cpp  graph.hpp
src/parser/: CMakeLists.txt  parser.cpp  parser.hpp
